[package]
name = "users"
description = "Pass-through for the users crate on unix, stub elsewhere"

authors = ["Julius Michaelis <gitter@liftm.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jcaesar/rust-users-stub"
version = "0.11.0"

[features]
force-stub = []
default = ["cache", "mock", "logging"]
cache = []
mock = []
logging = []

[dependencies]
cfg-if = "*"

[target.'cfg(unix)'.dependencies]
users-orig = { git = "https://github.com/ogham/rust-users", tag = "v0.11.0", package = "users" }
# again a patching limitation: can't use crates.io, or we'd have a dependency cycle
